fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ footer .wrap .logos img{
 }
 footer .wrap .logos .fa-brands{
   margin-top: 20px;
+  font-size: 20px;
   margin-right: 10px;
 }
 
@@ -236,6 +237,19 @@ footer .cp{
   text-align: center;
   margin-top: 30px;
   padding-bottom: 20px;
+}
+
+::-webkit-scrollbar{
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #1f4428; 
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: #ffc100;
 }
 
 /* media query */
